--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,8 @@
     "tabWidth": 4,
     "semi": true,
     "singleQuote": false,
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "[blade]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
