--- a/package.json
+++ b/package.json
@@ -10,26 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.16",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "fomantic-ui": "^2.8.4",
         "gulp-header": "^2.0.9",
-        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
         "prettier": "^2.0.4",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.11"
+        "sass": "^1.58.3",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.7.14"
     },
     "dependencies": {
         "codemirror": "^5.53.2",
         "elixir": "^0.1.2",
         "gulp": "^4.0.2",
-        "laravel-elixir": "^6.0.0-18",
         "monaco-editor": "^0.20.0"
     }
 }
