--- a/package.json
+++ b/package.json
@@ -10,22 +10,63 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@types/jquery": "^3.5.16",
-        "axios": "^0.19",
-        "cross-env": "^7.0",
-        "gulp-header": "^2.0.9",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "prettier": "^2.0.4",
+        "@babel/core": "^7.16.0",
+        "@babel/plugin-proposal-class-properties": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-react": "^7.16.0",
+        "@reduxjs/toolkit": "^1.7.0",
+        "@types/jquery": "^3.5.11",
+        "axios": "^0.23.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babelify": "^10.0.0",
+        "breakpoint-sass": "^2.7.1",
+        "browserify": "^17.0.0",
+        "compass-mixins": "^0.12.10",
+        "esbuild-plugin-replace": "^1.2.0",
+        "gulp": "^4.0.2",
+        "gulp-clean-css": "^4.3.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-connect": "^5.7.0",
+        "gulp-esbuild": "^0.9.2",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-sass": "^5.0.0",
+        "gulp-sourcemaps": "^3.0.0",
+        "gulp-terser": "^2.1.0",
+        "gulp-typescript": "*",
+        "gulp-uglify": "^3.0.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.58.3",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.7.14"
+        "sass": "^1.45.0",
+        "typescript": "^4.5.5",
+        "vinyl-buffer": "^1.0.1",
+        "vinyl-source-stream": "^2.0.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@monaco-editor/react": "^4.4.6",
+        "@mui/icons-material": "^5.11.0",
+        "@mui/material": "^5.10.13",
+        "@mui/x-date-pickers": "^5.0.7",
+        "animate.css": "^4.1.1",
+        "autoprefixer": "^10.4.13",
         "codemirror": "^5.53.2",
+        "date-fns": "^2.29.3",
         "elixir": "^0.1.2",
+        "file-icons-js": "github:websemantics/file-icons-js",
         "gulp": "^4.0.2",
-        "monaco-editor": "^0.20.0"
+        "gulp-postcss": "^9.0.1",
+        "monaco-editor": "^0.20.0",
+        "mui-file-dropzone": "^4.0.2",
+        "react": "^17.0.2",
+        "react-bootstrap-table-next": "^4.0.3",
+        "react-bootstrap-table2-paginator": "^2.1.2",
+        "react-bootstrap-table2-toolkit": "^2.1.3",
+        "react-dom": "^17.0.2",
+        "react-file-icon": "^1.2.0",
+        "reactdom": "^2.0.0",
+        "tailwindcss": "^3.2.4"
     }
 }
